# GW_2

./: .gitignore  logs.txt  machine_learning.ipynb  main.py  pyproject.toml  scraping.py  scraping_players.py  test.py  test2.py
csv/: 1-1:team.csv  1-1:team.json  1-3:players.csv  1_2ground.csv  1_2ground.json  2-1:matches.csv  2-2:innings_score.csv  2-3:at_bats.csv  2-4:pitches.csv  2_3at_bats.csv
csv/o_csv/: cleaned_merged_data.csv  cleaned_merged_data_english.csv  data_rows.csv  merged_data.csv  players_data.csv  players_data_with_team_id.csv
model_archive/: foul_prediction_model.pkl
